--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="css/icon-font.css" />
+<!--    <link rel="stylesheet" href="css/icon-font.css" /> -->
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
@@ -17,7 +17,16 @@
   </head>
   <body>
     <header class="header">
-      Some text
+      <div class="logo-box">
+        <img src="img/logo-white.png" alt="Logo" class="logo" />
+      </div>
+
+      <div class="text-box">
+      <h1 class="heading-primary">
+        <span class="heading-primary-main">Outdoors</span>
+        <span class="heading-primary-sub">is where life happens</span>
+      </h1>
+      </div>
     </header>
   </body>
 </html>
