--- a/index.html
+++ b/index.html
@@ -252,6 +252,37 @@
           <a href="#" class="btn btn--green">Discover all tours</a>
         </div>
       </section>
+
+      <section class="section-stories">
+        <div class="util-center-text util-margin-bottom-big">
+          <h2 class="heading-secondary">
+            We make people genuinely happy
+          </h2>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-8.jpg"
+                alt="Person on a tour"
+                class="story__img"
+              />
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary">
+                I had the best week ever with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis
+                temporibus a asperiores animi odit vitae, repellendus porro
+                incidunt fuga nam et totam dolore laborum iste corporis dolores,
+                unde, distinctio repellat.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!--
